[tool.poetry]
name = "mcts"
version = "0.1.0"
description = ""
authors = ["Patrick Hajali <hajalipat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
einops = "^0.7.0"
ipykernel = "^6.29.2"
graphviz = "^0.20.1"
plotly = "^5.19.0"
networkx = "^3.2.1"
ipywidgets = "^8.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
